--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,9 +10,12 @@ jobs:
     lint:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-python@v2
-            - uses: chartboost/ruff-action@v1
+            - name: Check out code
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
               with:
-                  args: --check .
-                  config: .ruff.toml
+                  fetch-depth: 0
+
+            - name: Lint with Ruff
+              uses: astral-sh/ruff-action@v3
+              with:
+                  version: v3.4.0
