--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,4 +18,4 @@ jobs:
             - name: Lint with Ruff
               uses: astral-sh/ruff-action@v3
               with:
-                  version: v3.4.0
+                  version: "3.4.0"
